--- a/process.html
+++ b/process.html
@@ -22,7 +22,7 @@
         
     <header id="home">
         <div class="flex header-text">
-            <img src="./process_of_recycling.jpg" alt=""> 
+            <img src="./process_of_recycling.JPG" alt=""> 
         </div>
     </header>
 
