--- a/process.html
+++ b/process.html
@@ -34,7 +34,7 @@
             <div class="container flex space-between">
                 <div>
                     <div>
-                        <img class="waste" src="recycle1.jpg" alt="">
+                        <img class="waste" src="recycle1.JPG" alt="">
                         <H2>S O R T I N G</H2>
                         <p>Nature does not know how to destroy certain waste such as glass, plastic ... <br>
                             To recover raw materials and protect the planet, let's sort our waste!</p>
